# kata-containers

./: Makefile  versions.yaml
.github/: actionlint.yaml
.github/workflows/: PR-wip-checks.yaml  actionlint.yaml  add-backport-label.yaml  add-issues-to-project.yaml  add-pr-sizing-label.yaml  auto-backport.yaml  basic-ci-amd64.yaml  build-checks.yaml  build-kata-static-tarball-amd64.yaml  build-kata-static-tarball-arm64-nvidia-gpu.yaml  build-kata-static-tarball-nvidia-gpu.yaml  build-kata-static-tarball-ppc64le.yaml  build-kata-static-tarball-s390x.yaml  cargo-deny-runner.yaml  ci-nightly.yaml  ci-on-push.yaml  ci.yaml  commit-message-check.yaml  darwin-tests.yaml  kata-runtime-classes-sync.yaml  move-issues-to-in-progress.yaml  payload-after-push.yaml  publish-kata-deploy-payload-arm64-nvidia-gpu.yaml  publish-kata-deploy-payload-nvidia-gpu.yaml  publish-kata-deploy-payload-ppc64le.yaml  release-amd64.yaml  release-arm64.yaml  release-nvidia-gpu.yaml  release-ppc64le.yaml  release-s390x.yaml  release.yaml  require-pr-porting-labels.yaml  run-cri-containerd-tests-ppc64le.yaml  run-cri-containerd-tests-s390x.yaml  run-k8s-tests-on-aks.yaml  run-k8s-tests-on-nvidia-gpu.yaml  run-kata-monitor-tests.yaml  run-runk-tests.yaml  static-checks.yaml
ci/: lib.sh
src/agent/: Cargo.toml
src/agent/src/: config.rs  device.rs  rpc.rs
src/dragonball/: Cargo.toml
src/dragonball/dbs_pci/: Cargo.toml
src/runtime/: Makefile  go.mod  go.sum
src/runtime-rs/: Cargo.toml
src/runtime-rs/crates/agent/: Cargo.toml
tests/: .golangci.yml  gha-run-k8s-common.sh  git-helper.sh
(+162 files in other folders)
