[package]
name = "agent"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
protobuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
slog-scope = { workspace = true }
ttrpc = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
tracing = { workspace = true }
url = { workspace = true }
nix = { workspace = true }
oci-spec = { workspace = true }

# Local dependencies
kata-types = { workspace = true }
logging = { workspace = true }
protocols = { workspace = true, features = ["async"] }

[features]
default = []

[package.metadata.cargo-machete]
ignored = ["slog-scope"]
